# otakuracy-service

./: .gitmodules  AGENTS.md  BOOTSTRAP.md  README.md  pyproject.toml  service.config.yaml  service.manifest.yaml
.github/workflows/: build.yml  guard-infra.yml  manifest.yml
app/: AGENTS.md  pyproject.toml
app/src/: cli.py  cli_ip_extract.py  cli_ip_link_agent.py  cli_ip_link_search.py  cli_keyword_extract.py  cli_manami_populate.py  cli_tweet_corpus.py  cli_v2.py  ip_keyword_analysis.py  normalize_keywords.py  pipeline.py  pipeline_v2.py
app/src/collect/: __main__.py  anilist.py  animate.py  base.py  cli.py  dedup.py  dedup_v2.py  eplus.py  eventernote.py  extract_ip.py  official_site.py  populate_manami.py  vtuber.py  whitelist.py
app/src/collect/ip_link/: agent.py  searcher.py
app/src/collect/tweet_corpus/: collector.py  keyword_extractor.py
app/src/db/: repository.py  schema.sql
container/: Containerfile  entrypoint.sh
docs/: architecture.md  contracts.md  design.md  sources.md
docs/adr/: 0001-ip-registry-over-whitelist.md  0002-event-centric-pipeline.md  0003-scraping-vs-ai-split.md  0004-sqlite-as-initial-db.md  0005-freemium-monetization-model.md  0006-pluggable-source-architecture.md  0007-abolish-run-whitelist.md  0008-event-identity-by-date-venue-ip.md  0008-event-identity-by-date-venue.md  0009-ip-extraction-before-dedup.md  0010-canonical-ip-space-and-mapping.md  0011-canonical-ip-source-selection.md  0012-k8s-job-naming-and-suite-structure.md  0013-twitter-corpus-for-ip-identification.md
progress/: current.md
scripts/: guard-infra.sh
(+1 files in other folders)
