[project]
name = "otakuracy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "click>=8.0",
    "playwright>=1.40",
    "requests>=2.31",
]

[tool.uv.sources]
common = { path = "../common" }

[project.optional-dependencies]
dev = ["pytest"]
